--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,28 +1,30 @@
 {
-  "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@headlessui/vue": "^1.7.23",
-    "@heroicons/vue": "^2.2.0",
-    "axios": "^1.13.2",
-    "motion": "^12.23.24",
-    "vue": "^3.5.24",
-    "vue-router": "^4.6.3",
-    "vue-toastification": "^2.0.0-rc.5"
-  },
-  "devDependencies": {
-    "@tailwindcss/vite": "^4.1.17",
-    "@vitejs/plugin-vue": "^6.0.1",
-    "autoprefixer": "^10.4.22",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17",
-    "vite": "^7.2.2"
-  }
+	"name": "frontend",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@headlessui/vue": "^1.7.23",
+		"@heroicons/vue": "^2.2.0",
+		"axios": "^1.13.2",
+		"motion": "^12.23.24",
+		"motion-v": "^1.7.4",
+		"vue": "^3.5.24",
+		"vue-router": "^4.6.3",
+		"vue-toastification": "^2.0.0-rc.5"
+	},
+	"devDependencies": {
+		"@tailwindcss/vite": "^4.1.17",
+		"@vitejs/plugin-vue": "^6.0.1",
+		"autoprefixer": "^10.4.22",
+		"jsrepo": "^3.0.8",
+		"postcss": "^8.5.6",
+		"tailwindcss": "^4.1.17",
+		"vite": "^7.2.2"
+	}
 }
