--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
 		"motion": "^12.23.24",
 		"motion-v": "^1.7.4",
 		"vue": "^3.5.24",
+		"vue-i18n": "^11.2.8",
 		"vue-router": "^4.6.3",
 		"vue-toastification": "^2.0.0-rc.5"
 	},
